--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Quest Quest</title>
-    <!-- <link type="text/css" rel="stylesheet" href="style.css"> -->
+    <link type="text/css" rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/quest_quest.js"></script>
   </head>
@@ -14,8 +14,10 @@
     <sidebar>
       <h4>Instructions</h4>
       <p>Use the arrow keys, or h j k l to move your character around the map</p>
-      <div class='players'></div>
+      <span class='player-count'></span>
+      <div class='message-log'><ul></ul></div>
     </sidebar>
+    <div class='map'></div>
   </body>
 </html>
 
