Added a service, js tweaks, player model changes

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
       <h4>Instructions</h4>
       <p>Use the arrow keys, or h j k l to move your character around the map</p>
       <span class='player-count'></span>
+      <h5>Players</h5>
+      <div class='players'><ul></ul></div>
+      <h5>Messages</h5>
       <div class='message-log'><ul></ul></div>
     </sidebar>
     <div class='map'></div>
